--- a/index.html
+++ b/index.html
@@ -1,11 +1,428 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    html под домашку №4
-</body>
+<html lang="ru">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>goit-markup-hw-02</title>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/0.6.0/modern-normalize.min.css"
+    />
+    <link rel="stylesheet" href="./css/styles.css" />
+  </head>
+  <body>
+    <!-- Шапка сайта -->
+    <header>
+      <div class="header-nav container">
+        <nav class="header-nav">
+          <a href="./index.html" class="logo"
+            ><span class="web">Web </span>Studio</a
+          >
+          <ul class="site-nav list">
+            <li class="item">
+              <a href="./index.html" class="link current">Студия</a>
+            </li>
+            <li class="item">
+              <a href="./portfolio.html" class="link">Портфолио</a>
+            </li>
+            <li class="item"><a href="" class="link">Контакты</a></li>
+          </ul>
+        </nav>
+        <ul class="contacts list">
+          <li class="item">
+            <a href="" class="contacts-link"
+              ><img
+                src="./images/envelope.svg"
+                alt="letter"
+              />info@devstudio.com</a
+            >
+          </li>
+          <li class="item">
+            <a href="" class="contacts-link"
+              ><img src="./images/mobile.svg" alt="mobile" />"+38 096 111 11
+              11"</a
+            >
+          </li>
+        </ul>
+      </div>
+    </header>
+    <main>
+      <section class="hero">
+        <h1 class="hero-title">
+          Эффективные решения <br />
+          для вашего бизнеса
+        </h1>
+        <a href="" class="button">Заказать услугу</a>
+      </section>
+      <!-- наши преимущества -->
+      <section class="advantages section">
+        <div class="container">
+          <h2 class="our-advantages">Наши преимущества</h2>
+          <ul class="advantages-list list">
+            <li class="advantages-item">
+              <img
+                src="./images/antenna.svg"
+                class="advantages-icon"
+                alt="antenna"
+              />
+              <h3 class="advantages-title">Внимание к деталям</h3>
+              <p class="text">
+                Идейные соображения, а также начало повседневной работы по
+                формированию позиции.
+              </p>
+            </li>
+            <li class="advantages-item">
+              <img
+                src="./images/clock.svg"
+                class="advantages-icon"
+                alt="clock"
+              />
+              <h3 class="advantages-title">Пунктуальность</h3>
+              <p class="text">
+                Задача организации, в особенности же рамки и место обучения
+                кадров влечет за собой.
+              </p>
+            </li>
+            <li class="advantages-item">
+              <img
+                src="./images/diagram.svg"
+                class="advantages-icon"
+                alt="diagram"
+              />
+              <h3 class="advantages-title">Планирование</h3>
+              <p class="text">
+                Равным образом консультация с широким активом в значительной
+                степени обуславливает.
+              </p>
+            </li>
+            <li class="advantages-item">
+              <img
+                src="./images/astronaut.svg"
+                class="advantages-icon"
+                alt="astronaut"
+              />
+              <h3 class="advantages-title">Современные технологии</h3>
+              <p class="text">
+                Значимость этих проблем настолько очевидна, что реализация
+                плановых заданий.
+              </p>
+            </li>
+          </ul>
+        </div>
+      </section>
+
+      <!-- чем мы занимаемся -->
+
+      <section class="directions section">
+        <div class="container">
+          <h2 class="section-title">Чем мы занимаемся</h2>
+          <ul class="directions-list list">
+            <li class="directions-item">
+              <img
+                src="./images/laptop.jpg"
+                alt="Десктопные приложения"
+                width="370"
+                height="294"
+              />
+              <p>Десктопные приложения</p>
+            </li>
+            <li class="directions-item">
+              <img
+                src="./images/mobileapp.jpg"
+                alt="Мобильные приложения"
+                width="370"
+                height="294"
+              />
+              <p>Мобильные приложения</p>
+            </li>
+            <li class="directions-item">
+              <img
+                src="./images/designdecision.jpg"
+                alt="Дизайнерские решения"
+                width="370"
+                height="294"
+              />
+              <p>Дизайнерские решения</p>
+            </li>
+          </ul>
+        </div>
+      </section>
+
+      <!-- наша команда -->
+
+      <section class="team section">
+        <div class="container">
+          <h2 class="section-title">Наша команда</h2>
+          <ul class="team-list list">
+            <li class="team-item">
+              <img
+                src="./images/team/nikolay.jpg"
+                class="team-image"
+                alt="name"
+              />
+              <h3 class="team-name">Николай Кучеренко</h3>
+              <p class="position">Product Designer</p>
+              <ul class="social-links list">
+                <li class="social-links-item">
+                  <a
+                    href=""
+                    class="social-links-icon"
+                    aria-label="ссылка на instagram"
+                    >instagram</a
+                  >
+                </li>
+                <li class="social-links-item">
+                  <a
+                    href=""
+                    class="social-links-icon"
+                    aria-label="ссылка на twitter"
+                    >twitter</a
+                  >
+                </li>
+                <li class="social-links-item">
+                  <a
+                    href=""
+                    class="social-links-icon"
+                    aria-label="ссылка на facebook"
+                    >facebook</a
+                  >
+                </li>
+                <li class="social-links-item">
+                  <a
+                    href=""
+                    class="social-links-icon"
+                    aria-label="ссылка на linkedin"
+                    >linkedin</a
+                  >
+                </li>
+              </ul>
+            </li>
+            <li class="team-item">
+              <img src="./images/team/olha.jpg" class="team-image" alt="name" />
+              <h3 class="team-name">Ольга Иванова</h3>
+              <p class="position">Frontend Developer</p>
+              <ul class="social-links list">
+                <li class="social-links-item">
+                  <a
+                    href=""
+                    class="social-links-icon"
+                    aria-label="ссылка на instagram"
+                    >instagram</a
+                  >
+                </li>
+                <li class="social-links-item">
+                  <a
+                    href=""
+                    class="social-links-icon"
+                    aria-label="ссылка на twitter"
+                    >twitter</a
+                  >
+                </li>
+                <li class="social-links-item">
+                  <a
+                    href=""
+                    class="social-links-icon"
+                    aria-label="ссылка на facebook"
+                    >facebook</a
+                  >
+                </li>
+                <li class="social-links-item">
+                  <a
+                    href=""
+                    class="social-links-icon"
+                    aria-label="ссылка на linkedin"
+                    >linkedin</a
+                  >
+                </li>
+              </ul>
+            </li>
+            <li class="team-item">
+              <img
+                src="./images/team/andrey.jpg"
+                class="team-image"
+                alt="name"
+              />
+              <h3 class="team-name">Андрей Шевченко</h3>
+              <p class="position">Marketing</p>
+              <ul class="social-links list">
+                <li class="social-links-item">
+                  <a
+                    href=""
+                    class="social-links-icon"
+                    aria-label="ссылка на instagram"
+                    >instagram</a
+                  >
+                </li>
+                <li class="social-links-item">
+                  <a
+                    href=""
+                    class="social-links-icon"
+                    aria-label="ссылка на twitter"
+                    >twitter</a
+                  >
+                </li>
+                <li class="social-links-item">
+                  <a
+                    href=""
+                    class="social-links-icon"
+                    aria-label="ссылка на facebook"
+                    >facebook</a
+                  >
+                </li>
+                <li class="social-links-item">
+                  <a
+                    href=""
+                    class="social-links-icon"
+                    aria-label="ссылка на linkedin"
+                    >linkedin</a
+                  >
+                </li>
+              </ul>
+            </li>
+            <li class="team-item">
+              <img src="./images/team/ivan.jpg" class="team-image" alt="name" />
+              <h3 class="team-name">Иван Николаев</h3>
+              <p class="position">UI Designer</p>
+              <ul class="social-links list">
+                <li class="social-links-item">
+                  <a
+                    href=""
+                    class="social-links-icon"
+                    aria-label="ссылка на instagram"
+                    >instagram</a
+                  >
+                </li>
+                <li class="social-links-item">
+                  <a
+                    href=""
+                    class="social-links-icon"
+                    aria-label="ссылка на twitter"
+                    >twitter</a
+                  >
+                </li>
+                <li class="social-links-item">
+                  <a
+                    href=""
+                    class="social-links-icon"
+                    aria-label="ссылка на facebook"
+                    >facebook</a
+                  >
+                </li>
+                <li class="social-links-item">
+                  <a
+                    href=""
+                    class="social-links-icon"
+                    aria-label="ссылка на linkedin"
+                    >linkedin</a
+                  >
+                </li>
+              </ul>
+            </li>
+          </ul>
+        </div>
+      </section>
+
+      <!-- постоянные клиенты -->
+
+      <section class="clients section">
+        <div class="container section">
+          <h2 class="section-title">Постоянные клиенты</h2>
+          <ul class="clients-list list">
+            <li class="clients-item">
+              <a href="" class="clients-link"
+                ><img src="./images/client2.svg" alt="client"
+              /></a>
+            </li>
+            <li class="clients-item">
+              <a href="" class="clients-link"
+                ><img src="./images/client3.svg" alt="client"
+              /></a>
+            </li>
+            <li class="clients-item">
+              <a href="" class="clients-link"
+                ><img src="./images/client1.svg" alt="client"
+              /></a>
+            </li>
+            <li class="clients-item">
+              <a href="" class="clients-link"
+                ><img src="./images/client4.svg" alt="client"
+              /></a>
+            </li>
+            <li class="clients-item">
+              <a href="" class="clients-link"
+                ><img src="./images/client5.svg" alt="client"
+              /></a>
+            </li>
+            <li class="clients-item">
+              <a href="" class="clients-link"
+                ><img src="./images/client6.svg" alt="client"
+              /></a>
+            </li>
+          </ul>
+        </div>
+      </section>
+    </main>
+    <footer>
+      <div class="container-footer container">
+        <div class="address">
+          <a href="./index.html" class="logowhite"
+            ><span class="web">Web </span>Studio</a
+          >
+          <address class="footer-addres">
+            <span class="address-kiev"
+              >г. Киев, Бульвар Леси Украинки, д. 26</span
+            ><br />
+            <a href="info@devstudio.com" class="footer-contacts"
+              >info@devstudio.com</a
+            ><br />
+            <a href="tel:+380961111111" class="footer-contacts"
+              >+38 096 111 11 11</a
+            >
+          </address>
+        </div>
+        <div class="footer-links">
+          <b class="join-us">присоединяйтесь</b>
+          <ul class="footer-list list">
+            <li class="footer-item">
+              <a
+                href=""
+                class="footer-social-links"
+                aria-label="ссылка на instagram"
+                >instagram</a
+              >
+            </li>
+            <li class="footer-item">
+              <a
+                href=""
+                class="footer-social-links"
+                aria-label="ссылка на twitter"
+                >twitter</a
+              >
+            </li>
+            <li class="footer-item">
+              <a
+                href=""
+                class="footer-social-links"
+                aria-label="ссылка на facebook"
+                >facebook</a
+              >
+            </li>
+            <li class="footer-item">
+              <a
+                href=""
+                class="footer-social-links"
+                aria-label="ссылка на linkedin"
+                >facebook</a
+              >
+            </li>
+          </ul>
+          <!-- <p class="develop">2020 | Developed by GoIT Students</p> -->
+        </div>
+      </div>
+    </footer>
+  </body>
 </html>
