Размеры иконок соответствуют макету.Большое изображение с эффектом затемнения (под шапкой) оформлено как фон. Для затемнения используется многослойный фон с градиентом. Указана максимальная ширина блока с этим фоном.В блоке контактов в шапке, добавлены иконки конверта и телефона.В секции преимуществ добавлены иконки. В секции команды добавлены иконки соцсетей. В секции клиентов добавлены иконки компаний. В футере добавлены иконки соцсетей.

--- a/index.html
+++ b/index.html
@@ -34,18 +34,10 @@
         </nav>
         <ul class="contacts list">
           <li class="item">
-            <a href="" class="contacts-link"
-              ><img
-                src="./images/envelope.svg"
-                alt="letter"
-              />info@devstudio.com</a
-            >
+            <a href="" class="contacts-link mail">info@devstudio.com</a>
           </li>
           <li class="item">
-            <a href="" class="contacts-link"
-              ><img src="./images/mobile.svg" alt="mobile" />"+38 096 111 11
-              11"</a
-            >
+            <a href="" class="contacts-link phone">+38 096 111 11 11"</a>
           </li>
         </ul>
       </div>
@@ -63,48 +55,38 @@
         <div class="container">
           <h2 class="our-advantages">Наши преимущества</h2>
           <ul class="advantages-list list">
-            <li class="advantages-item">
-              <img
-                src="./images/antenna.svg"
-                class="advantages-icon"
-                alt="antenna"
-              />
+            <li class="advantages-item icon-antenna">
               <h3 class="advantages-title">Внимание к деталям</h3>
               <p class="text">
                 Идейные соображения, а также начало повседневной работы по
                 формированию позиции.
               </p>
             </li>
-            <li class="advantages-item">
-              <img
-                src="./images/clock.svg"
-                class="advantages-icon"
-                alt="clock"
-              />
+            <li class="advantages-item icon-clock">
               <h3 class="advantages-title">Пунктуальность</h3>
               <p class="text">
                 Задача организации, в особенности же рамки и место обучения
                 кадров влечет за собой.
               </p>
             </li>
-            <li class="advantages-item">
-              <img
+            <li class="advantages-item icon-diagram">
+              <!-- <img
                 src="./images/diagram.svg"
                 class="advantages-icon"
                 alt="diagram"
-              />
+              /> -->
               <h3 class="advantages-title">Планирование</h3>
               <p class="text">
                 Равным образом консультация с широким активом в значительной
                 степени обуславливает.
               </p>
             </li>
-            <li class="advantages-item">
-              <img
+            <li class="advantages-item icon-astronaut">
+              <!-- <img
                 src="./images/astronaut.svg"
                 class="advantages-icon"
                 alt="astronaut"
-              />
+              /> -->
               <h3 class="advantages-title">Современные технологии</h3>
               <p class="text">
                 Значимость этих проблем настолько очевидна, что реализация
@@ -390,34 +372,30 @@
             <li class="footer-item">
               <a
                 href=""
-                class="footer-social-links"
+                class="footer-social-links instagram"
                 aria-label="ссылка на instagram"
-                >instagram</a
-              >
+              ></a>
             </li>
             <li class="footer-item">
               <a
                 href=""
-                class="footer-social-links"
+                class="footer-social-links twitter"
                 aria-label="ссылка на twitter"
-                >twitter</a
-              >
+              ></a>
             </li>
             <li class="footer-item">
               <a
                 href=""
-                class="footer-social-links"
+                class="footer-social-links facebook"
                 aria-label="ссылка на facebook"
-                >facebook</a
-              >
+              ></a>
             </li>
             <li class="footer-item">
               <a
                 href=""
-                class="footer-social-links"
+                class="footer-social-links linkedin"
                 aria-label="ссылка на linkedin"
-                >facebook</a
-              >
+              ></a>
             </li>
           </ul>
           <!-- <p class="develop">2020 | Developed by GoIT Students</p> -->
