задали тени,На карточках команды и портфолио есть эффект тени.

--- a/portfolio.html
+++ b/portfolio.html
@@ -34,18 +34,10 @@
         </nav>
         <ul class="contacts list">
           <li class="item">
-            <a href="" class="contacts-link"
-              ><img
-                src="./images/envelope.svg"
-                alt="letter"
-              />info@devstudio.com</a
-            >
+            <a href="" class="contacts-link mail">info@devstudio.com</a>
           </li>
           <li class="item">
-            <a href="" class="contacts-link"
-              ><img src="./images/mobile.svg" alt="mobile" />"+38 096 111 11
-              11"</a
-            >
+            <a href="" class="contacts-link phone">+38 096 111 11 11"</a>
           </li>
         </ul>
       </div>
@@ -79,7 +71,7 @@
             <li class="projects-item">
               <a href="">
                 <img
-                  src="./images/tehno.jpg"
+                  src="./images/tehnoopti.jpg"
                   class="projects-image"
                   alt="технокряк"
                   width="370"
@@ -99,7 +91,7 @@
             <li class="projects-item">
               <a href="">
                 <img
-                  src="./images/new-orlean.jpg"
+                  src="./images/new-orleanopti.jpg"
                   class="projects-image"
                   alt="постер Нью Орлеан"
                   width="370"
@@ -121,7 +113,7 @@
             <li class="projects-item">
               <a href="">
                 <img
-                  src="./images/seafood.jpg"
+                  src="./images/seafoodopti.jpg"
                   class="projects-image"
                   alt="ресторан морепродукты"
                   width="370"
@@ -141,7 +133,7 @@
             <li class="projects-item">
               <a href="">
                 <img
-                  src="./images/headphones.jpg"
+                  src="./images/headphonesopti.jpg"
                   class="projects-image"
                   alt="проект Прайм"
                   width="370"
@@ -161,7 +153,7 @@
             <li class="projects-item">
               <a href="">
                 <img
-                  src="./images/boxes.jpg"
+                  src="./images/boxesopti.jpg"
                   class="projects-image"
                   alt="проект коробки"
                   width="370"
@@ -181,7 +173,7 @@
             <li class="projects-item">
               <a href="">
                 <img
-                  src="./images/inspiration-has-no-borders.jpg"
+                  src="./images/inspiration-has-no-bordersopti.jpg"
                   class="projects-image"
                   alt="Вдохновение не имеет границ"
                   width="370"
@@ -201,7 +193,7 @@
             <li class="projects-item">
               <a href="">
                 <img
-                  src="./images/limited-edition.jpg"
+                  src="./images/limited-editionopti.jpg"
                   class="progects-image"
                   alt=" издание ограниченный выпуск"
                   width="370"
@@ -221,7 +213,7 @@
             <li class="projects-item">
               <a href="">
                 <img
-                  src="./images/lab.jpg"
+                  src="./images/labopti.jpg"
                   class="projects-image"
                   alt="проект ЛАБ"
                   width="370"
@@ -241,7 +233,7 @@
             <li class="projects-item">
               <a href="">
                 <img
-                  src="./images/growing-business.jpg"
+                  src="./images/growing-businessopti.jpg"
                   class="projects-image"
                   alt="Растущий бизнес"
                   width="370"
@@ -286,34 +278,30 @@
             <li class="footer-item">
               <a
                 href=""
-                class="footer-social-links"
+                class="footer-social-links instagram"
                 aria-label="ссылка на instagram"
-                >instagram</a
-              >
+              ></a>
             </li>
             <li class="footer-item">
               <a
                 href=""
-                class="footer-social-links"
+                class="footer-social-links twitter"
                 aria-label="ссылка на twitter"
-                >twitter</a
-              >
+              ></a>
             </li>
             <li class="footer-item">
               <a
                 href=""
-                class="footer-social-links"
+                class="footer-social-links facebook"
                 aria-label="ссылка на facebook"
-                >facebook</a
-              >
+              ></a>
             </li>
             <li class="footer-item">
               <a
                 href=""
-                class="footer-social-links"
+                class="footer-social-links linkedin"
                 aria-label="ссылка на linkedin"
-                >facebook</a
-              >
+              ></a>
             </li>
           </ul>
           <!-- <p class="develop">2020 | Developed by GoIT Students</p> -->
