--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
           <ul class="directions-list list">
             <li class="directions-item">
               <img
-                src="./images/laptop.jpg"
+                src="./images/laptopopti.jpg"
                 alt="Десктопные приложения"
                 width="370"
                 height="294"
@@ -114,7 +114,7 @@
             </li>
             <li class="directions-item">
               <img
-                src="./images/mobileapp.jpg"
+                src="./images/mobileappopti.jpg"
                 alt="Мобильные приложения"
                 width="370"
                 height="294"
@@ -123,7 +123,7 @@
             </li>
             <li class="directions-item">
               <img
-                src="./images/designdecision.jpg"
+                src="./images/designdecisionopti.jpg"
                 alt="Дизайнерские решения"
                 width="370"
                 height="294"
@@ -142,7 +142,7 @@
           <ul class="team-list list">
             <li class="team-item">
               <img
-                src="./images/team/nikolay.jpg"
+                src="./images/team/nikolayopti.jpg"
                 class="team-image"
                 alt="name"
               />
@@ -184,7 +184,11 @@
               </ul>
             </li>
             <li class="team-item">
-              <img src="./images/team/olha.jpg" class="team-image" alt="name" />
+              <img
+                src="./images/team/olhaopti.jpg"
+                class="team-image"
+                alt="name"
+              />
               <h3 class="team-name">Ольга Иванова</h3>
               <p class="position">Frontend Developer</p>
               <ul class="social-links list">
@@ -224,7 +228,7 @@
             </li>
             <li class="team-item">
               <img
-                src="./images/team/andrey.jpg"
+                src="./images/team/andreyopti.jpg"
                 class="team-image"
                 alt="name"
               />
@@ -266,7 +270,11 @@
               </ul>
             </li>
             <li class="team-item">
-              <img src="./images/team/ivan.jpg" class="team-image" alt="name" />
+              <img
+                src="./images/team/ivanopti.jpg"
+                class="team-image"
+                alt="name"
+              />
               <h3 class="team-name">Иван Николаев</h3>
               <p class="position">UI Designer</p>
               <ul class="social-links list">
