сделаны иконки через svg-sprite

--- a/index.html
+++ b/index.html
@@ -154,32 +154,42 @@
                     href=""
                     class="social-links-icon"
                     aria-label="ссылка на instagram"
-                    >instagram</a
                   >
+                    <svg class="icon">
+                      <use href="./images/sprite.svg#icon-instagramw"></use>
+                    </svg>
+                  </a>
                 </li>
                 <li class="social-links-item">
                   <a
                     href=""
                     class="social-links-icon"
                     aria-label="ссылка на twitter"
-                    >twitter</a
-                  >
+                    ><svg class="icon">
+                      <use href="./images/sprite.svg#icon-twitterw"></use></svg
+                  ></a>
                 </li>
                 <li class="social-links-item">
                   <a
                     href=""
                     class="social-links-icon"
-                    aria-label="ссылка на facebook"
-                    >facebook</a
+                    aria-label="ссылка на instagram"
                   >
+                    <svg class="icon">
+                      <use href="./images/sprite.svg#icon-facebookw"></use>
+                    </svg>
+                  </a>
                 </li>
                 <li class="social-links-item">
                   <a
                     href=""
                     class="social-links-icon"
-                    aria-label="ссылка на linkedin"
-                    >linkedin</a
+                    aria-label="ссылка на instagram"
                   >
+                    <svg class="icon">
+                      <use href="./images/sprite.svg#icon-linkedinw"></use>
+                    </svg>
+                  </a>
                 </li>
               </ul>
             </li>
@@ -197,32 +207,42 @@
                     href=""
                     class="social-links-icon"
                     aria-label="ссылка на instagram"
-                    >instagram</a
                   >
+                    <svg class="icon">
+                      <use href="./images/sprite.svg#icon-instagramw"></use>
+                    </svg>
+                  </a>
                 </li>
                 <li class="social-links-item">
                   <a
                     href=""
                     class="social-links-icon"
                     aria-label="ссылка на twitter"
-                    >twitter</a
-                  >
+                    ><svg class="icon">
+                      <use href="./images/sprite.svg#icon-twitterw"></use></svg
+                  ></a>
                 </li>
                 <li class="social-links-item">
                   <a
                     href=""
                     class="social-links-icon"
-                    aria-label="ссылка на facebook"
-                    >facebook</a
+                    aria-label="ссылка на instagram"
                   >
+                    <svg class="icon">
+                      <use href="./images/sprite.svg#icon-facebookw"></use>
+                    </svg>
+                  </a>
                 </li>
                 <li class="social-links-item">
                   <a
                     href=""
                     class="social-links-icon"
-                    aria-label="ссылка на linkedin"
-                    >linkedin</a
+                    aria-label="ссылка на instagram"
                   >
+                    <svg class="icon">
+                      <use href="./images/sprite.svg#icon-linkedinw"></use>
+                    </svg>
+                  </a>
                 </li>
               </ul>
             </li>
@@ -240,32 +260,42 @@
                     href=""
                     class="social-links-icon"
                     aria-label="ссылка на instagram"
-                    >instagram</a
                   >
+                    <svg class="icon">
+                      <use href="./images/sprite.svg#icon-instagramw"></use>
+                    </svg>
+                  </a>
                 </li>
                 <li class="social-links-item">
                   <a
                     href=""
                     class="social-links-icon"
                     aria-label="ссылка на twitter"
-                    >twitter</a
-                  >
+                    ><svg class="icon">
+                      <use href="./images/sprite.svg#icon-twitterw"></use></svg
+                  ></a>
                 </li>
                 <li class="social-links-item">
                   <a
                     href=""
                     class="social-links-icon"
-                    aria-label="ссылка на facebook"
-                    >facebook</a
+                    aria-label="ссылка на instagram"
                   >
+                    <svg class="icon">
+                      <use href="./images/sprite.svg#icon-facebookw"></use>
+                    </svg>
+                  </a>
                 </li>
                 <li class="social-links-item">
                   <a
                     href=""
                     class="social-links-icon"
-                    aria-label="ссылка на linkedin"
-                    >linkedin</a
+                    aria-label="ссылка на instagram"
                   >
+                    <svg class="icon">
+                      <use href="./images/sprite.svg#icon-linkedinw"></use>
+                    </svg>
+                  </a>
                 </li>
               </ul>
             </li>
@@ -283,32 +313,42 @@
                     href=""
                     class="social-links-icon"
                     aria-label="ссылка на instagram"
-                    >instagram</a
                   >
+                    <svg class="icon">
+                      <use href="./images/sprite.svg#icon-instagramw"></use>
+                    </svg>
+                  </a>
                 </li>
                 <li class="social-links-item">
                   <a
                     href=""
                     class="social-links-icon"
                     aria-label="ссылка на twitter"
-                    >twitter</a
-                  >
+                    ><svg class="icon">
+                      <use href="./images/sprite.svg#icon-twitterw"></use></svg
+                  ></a>
                 </li>
                 <li class="social-links-item">
                   <a
                     href=""
                     class="social-links-icon"
-                    aria-label="ссылка на facebook"
-                    >facebook</a
+                    aria-label="ссылка на instagram"
                   >
+                    <svg class="icon">
+                      <use href="./images/sprite.svg#icon-facebookw"></use>
+                    </svg>
+                  </a>
                 </li>
                 <li class="social-links-item">
                   <a
                     href=""
                     class="social-links-icon"
-                    aria-label="ссылка на linkedin"
-                    >linkedin</a
+                    aria-label="ссылка на instagram"
                   >
+                    <svg class="icon">
+                      <use href="./images/sprite.svg#icon-linkedinw"></use>
+                    </svg>
+                  </a>
                 </li>
               </ul>
             </li>
