--- a/portfolio.html
+++ b/portfolio.html
@@ -34,10 +34,18 @@
         </nav>
         <ul class="contacts list">
           <li class="item">
-            <a href="" class="contacts-link mail">info@devstudio.com</a>
+            <a href="" class="contacts-link"
+              ><svg class="contacts-logo" width="16" height="11">
+                <use href="./images/sprite.svg#icon-envelopew"></use></svg
+              >info@devstudio.com</a
+            >
           </li>
           <li class="item">
-            <a href="" class="contacts-link phone">+38 096 111 11 11"</a>
+            <a href="" class="contacts-link"
+              ><svg class="contacts-logo" width="10" height="14">
+                <use href="./images/sprite.svg#icon-mobile"></use></svg
+              >+38 096 111 11 11</a
+            >
           </li>
         </ul>
       </div>
