в наших преимуществах лого из свг спрайта

--- a/index.html
+++ b/index.html
@@ -64,6 +64,11 @@
           <h2 class="our-advantages">Наши преимущества</h2>
           <ul class="advantages-list list">
             <li class="advantages-item icon-antenna">
+              <div class="advantages-icon">
+                <svg width="70" height="70">
+                  <use href="./images/sprite.svg#icon-antenna"></use>
+                </svg>
+              </div>
               <h3 class="advantages-title">Внимание к деталям</h3>
               <p class="text">
                 Идейные соображения, а также начало повседневной работы по
@@ -71,6 +76,11 @@
               </p>
             </li>
             <li class="advantages-item icon-clock">
+              <div class="advantages-icon">
+                <svg width="70" height="70">
+                  <use href="./images/sprite.svg#icon-clock"></use>
+                </svg>
+              </div>
               <h3 class="advantages-title">Пунктуальность</h3>
               <p class="text">
                 Задача организации, в особенности же рамки и место обучения
@@ -78,11 +88,11 @@
               </p>
             </li>
             <li class="advantages-item icon-diagram">
-              <!-- <img
-                src="./images/diagram.svg"
-                class="advantages-icon"
-                alt="diagram"
-              /> -->
+              <div class="advantages-icon">
+                <svg width="70" height="70">
+                  <use href="./images/sprite.svg#icon-diagram"></use>
+                </svg>
+              </div>
               <h3 class="advantages-title">Планирование</h3>
               <p class="text">
                 Равным образом консультация с широким активом в значительной
@@ -90,11 +100,11 @@
               </p>
             </li>
             <li class="advantages-item icon-astronaut">
-              <!-- <img
-                src="./images/astronaut.svg"
-                class="advantages-icon"
-                alt="astronaut"
-              /> -->
+              <div class="advantages-icon">
+                <svg width="70" height="70">
+                  <use href="./images/sprite.svg#icon-astronaut"></use>
+                </svg>
+              </div>
               <h3 class="advantages-title">Современные технологии</h3>
               <p class="text">
                 Значимость этих проблем настолько очевидна, что реализация
