в футере лого из свг спрайта

--- a/index.html
+++ b/index.html
@@ -444,29 +444,41 @@
             <li class="footer-item">
               <a
                 href=""
-                class="footer-social-links instagram"
+                class="footer-social-links"
                 aria-label="ссылка на instagram"
+              >
+                <svg class="footer-icon">
+                  <use href="./images/sprite.svg#icon-instagramw"></use></svg
               ></a>
             </li>
             <li class="footer-item">
               <a
                 href=""
-                class="footer-social-links twitter"
+                class="footer-social-links"
                 aria-label="ссылка на twitter"
+              >
+                <svg class="footer-icon">
+                  <use href="./images/sprite.svg#icon-twitterw"></use></svg
               ></a>
             </li>
             <li class="footer-item">
               <a
                 href=""
-                class="footer-social-links facebook"
+                class="footer-social-links"
                 aria-label="ссылка на facebook"
+              >
+                <svg class="footer-icon">
+                  <use href="./images/sprite.svg#icon-facebookw"></use></svg
               ></a>
             </li>
             <li class="footer-item">
               <a
                 href=""
-                class="footer-social-links linkedin"
+                class="footer-social-links"
                 aria-label="ссылка на linkedin"
+              >
+                <svg class="footer-icon">
+                  <use href="./images/sprite.svg#icon-linkedinw"></use></svg
               ></a>
             </li>
           </ul>
